@@ -163,7 +163,6 @@ our $build_defaults = {
     default_model      => 'DBIC',
     localize_class     => 'HTML::FormFu::I18N',
     auto_error_message => 'form_%s_%t',
-    auto_container_error_class     => 'error',
     auto_container_per_error_class => 'error_%s_%t',
     error_tag          => 'span',
 };
@@ -3089,6 +3088,7 @@ If you're using L<best practices|/"BEST PRACTICES">, you'll only need to set
 these once per-application in your app-wide config file.
 
     ---
+    auto_container_error_class: 'error'
     auto_error_class: 'error_message error_%s_%t'
 
 =head1 REMOVED METHODS
