@@ -4,7 +4,8 @@
       Template file 'label_tag' renamed to 'label_element' - old file can
       be deleted. 'field' file changed. New 'errors' file.
     
-    - auto_error_class() no longer has a default value.
+    - auto_container_error_class(), auto_error_class()
+      no longer have default values.
       See "RESTORING LEGACY HTML CLASSES" in HTML::FormFu docs to restore
       previous behaviour.
     
